# mlops-promgraf

./: Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
deployment/grafana/dashboards/: API-dashboard.json  Infra-dashboard.json  Model-dashboard.json
deployment/grafana/provisioning/dashboards/: dashboards.yaml
deployment/grafana/provisioning/datasources/: datasources.yaml
deployment/prometheus/: prometheus.yml
deployment/prometheus/rules/: alert_rules.yml
scripts/: generate_traffic.sh
src/api/: Dockerfile  main.py
